--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL=postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public
 JWT_SECRET=jwtsecretkey
 PORT=8080
+STRIPE_SECRET_KEY=secretkey
