--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1"
+    "jsonwebtoken": "^9.0.1",
+    "stripe": "^13.4.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -35,5 +36,8 @@
   },
   "engines": {
     "node": ">=16"
+  },
+  "prisma": {
+    "seed": "ts-node-dev prisma/seed/index.ts --resolveJsonModule"
   }
 }
