--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@prisma/client": "^5.1.1",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.40.0",
     "compose-middleware": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "multer": "^1.4.5-lts.1",
     "stripe": "^13.4.0"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
     "eslint": "^8.47.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
@@ -35,7 +38,7 @@
     "typescript": "^5.1.6"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "prisma": {
     "seed": "ts-node-dev prisma/seed/index.ts --resolveJsonModule"
